# streamlit-on-cloudrun

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
app/model/: rembg.py
