[tool.poetry]
name = "streamlit-on-gae"
version = "0.1.0"
description = ""
authors = ["Makoto Tanji <tanji.makoto@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
rembg = "^2.0.3"
streamlit = "^1.5.0"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
